--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Luja's Portfolio</title>
     <link rel="stylesheet" href="css/bootstrap.css" >
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -266,7 +266,7 @@
                 <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-9 col-sm-10 col-11 mx-auto">
                     <form action="" class="text-white fs-6">
                         <div class="mb-3">
-                            <label class="form-label text-white">Name Surname</label>
+                            <label class="form-label text-white">Luja Ratna Manandhar</label>
                             <input type="text" class="form-control">
                         </div>
                         <div class="mb-3">
